adding function for wrapping pipline scripts execution.

--- a/Obi/utilities/MergeUtility/DTBMerger/DTBMerger.csproj
+++ b/Obi/utilities/MergeUtility/DTBMerger/DTBMerger.csproj
@@ -40,6 +40,7 @@
     <Compile Include="DTBRenamer.cs" />
     <Compile Include="PipelineInterface\ScriptParameter.cs" />
     <Compile Include="PipelineInterface\ScriptParser.cs" />
+    <Compile Include="PipelineInterface\ScriptsFunctions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
