--- a/Obi/utilities/MergeUtility/DTBMerger/DTBMerger.csproj
+++ b/Obi/utilities/MergeUtility/DTBMerger/DTBMerger.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonFunctions.cs" />
     <Compile Include="DTBFilesInfo.cs" />
     <Compile Include="DTBIntegrator.cs" />
     <Compile Include="DTBMerger.cs" />
