--- a/trunk/Obi/PipelineInterface/PipelineInterface.csproj
+++ b/trunk/Obi/PipelineInterface/PipelineInterface.csproj
@@ -203,6 +203,10 @@
       <DependentUpon>StringControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="ParameterControls\StringControl.fr.resx">
+      <DependentUpon>StringControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="ParameterControls\StringControl.hi.resx">
       <DependentUpon>StringControl.cs</DependentUpon>
       <SubType>Designer</SubType>
