--- a/trunk/Obi/PipelineInterface/PipelineInterface.csproj
+++ b/trunk/Obi/PipelineInterface/PipelineInterface.csproj
@@ -101,6 +101,7 @@
     <EmbeddedResource Include="messages.ar.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="messages.de.resx" />
     <EmbeddedResource Include="messages.es.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -146,6 +147,10 @@
       <DependentUpon>PathBrowserControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="ParameterControls\PathBrowserControl.de.resx">
+      <DependentUpon>PathBrowserControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="ParameterControls\PathBrowserControl.es.resx">
       <DependentUpon>PathBrowserControl.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -188,6 +193,10 @@
       <DependentUpon>StringControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="ParameterControls\StringControl.de.resx">
+      <DependentUpon>StringControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="ParameterControls\StringControl.es.resx">
       <DependentUpon>StringControl.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -217,6 +226,10 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="PipelineInterfaceForm.ar.resx">
+      <DependentUpon>PipelineInterfaceForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PipelineInterfaceForm.de.resx">
       <DependentUpon>PipelineInterfaceForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
